fix: add row-gap to features content for improved spacing

--- a/src/assets/css/modules/_features.scss
+++ b/src/assets/css/modules/_features.scss
@@ -32,6 +32,7 @@
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
+        row-gap: 1rem;
 
         &-item {
             display: flex;
